--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </a>
             </div>
         </section>     
-        <img class="apresentacao__imagem" src="./src/imagens/imagem.png" alt="Foto da Joana Programando">       
+        <img class="apresentacao__imagem" src="./src/imagens/Imagem.png" alt="Foto da Joana Programando">       
     </main>
     <footer class="rodape"> 
         <p> Desenvolvido por Alura </p>    
